<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">>
    <PreferenceCategory
        app:key="cat_ajustes"
        app:title="@string/settings_title">
        <ListPreference
            app:dialogTitle="@string/theme_dialog_title"
            app:entries="@array/temas"
            app:entryValues="@array/codigosTemas"
            app:key="tema"
            app:summary="@string/theme_summary"
            app:title="@string/theme_title" />
        <ListPreference
            app:dialogTitle="@string/lang_dialog_title"
            app:entries="@array/idiomas"
            app:entryValues="@array/codigosIdiomas"
            app:key="idioma"
            app:summary="@string/lang_summary"
            app:title="@string/lang_title" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>