<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.SplashActivity">

    <!-- Círculo central con texto UNIGO -->
    <androidx.cardview.widget.CardView
        android:id="@+id/centerCircle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <!-- Logos orbitando -->
    <ImageView
        android:id="@+id/logo1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_description" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_description" />

    <ImageView
        android:id="@+id/logo3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_description" />

    <!-- Indicador deslizable -->
    <FrameLayout
        android:id="@+id/slideUpContainer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/slideUpArrow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_swipe_up"
            android:contentDescription="@string/swipe_up_description" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>